--- a/views/hr_employee_views.xml
+++ b/views/hr_employee_views.xml
@@ -3,9 +3,9 @@
     <record id="view_employee_form_leave_reviewer_inherit" model="ir.ui.view">
         <field name="name">hr.employee.form.leave.reviewer.inherit</field>
         <field name="model">hr.employee</field>
-        <field name="inherit_id" ref="hr_holidays.view_employee_form_leave_inherit"/>
+        <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
-            <field name="leave_manager_id" position="after">
+            <field name="leave_manager_id" position="before">
                 <field name="leave_reviewer_id"/>
             </field>
         </field>
@@ -14,7 +14,7 @@
     <record id="view_employee_form_leave_manager_inherit" model="ir.ui.view">
         <field name="name">hr.employee.form.leave.manager.inherit</field>
         <field name="model">hr.employee</field>
-        <field name="inherit_id" ref="hr_holidays.view_employee_form_leave_inherit"/>
+        <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
             <field name="leave_manager_id" position="attributes">
                 <attribute name="string">Approver</attribute>
@@ -25,7 +25,7 @@
     <record id="view_employee_form_coach_inherit" model="ir.ui.view">
         <field name="name">hr.employee.form.coach.inherit</field>
         <field name="model">hr.employee</field>
-        <field name="inherit_id" ref="hr_holidays.view_employee_form_leave_inherit"/>
+        <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
             <field name="coach_id" position="attributes">
                 <attribute name="string">Supervisor</attribute>
