--- a/views/hr_leave_views.xml
+++ b/views/hr_leave_views.xml
@@ -9,10 +9,6 @@
                 <attribute name="statusbar_visible">draft,confirm,validate1,validate</attribute>
             </field>
 
-            <field name="holiday_status_id" position="after">
-                <field name="leave_reviewer_id" groups="hr_holidays.group_hr_holidays_user"/>
-            </field>
-
             <button name="action_approve" position="attributes">
                 <attribute name="string">Review</attribute>
                 <attribute name="groups">dh_leave_mgt.group_hr_holidays_reviewer</attribute>
@@ -20,7 +16,7 @@
         </field>
     </record>
 
-    <record id="hr_leave_view_tree_inherit" model="ir.ui.view">
+    <!-- <record id="hr_leave_view_tree_inherit" model="ir.ui.view">
         <field name="name">hr.leave.tree.inherit</field>
         <field name="model">hr.leave</field>
         <field name="inherit_id" ref="hr_holidays.hr_leave_view_tree"/>
@@ -29,5 +25,12 @@
                 <field name="leave_reviewer_id"/>
             </field>
         </field>
+    </record> -->
+    <record id="action_custom_leave" model="ir.actions.act_window">
+        <field name="name">Employee Leaves</field>
+        <field name="res_model">hr.leave</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="hr_holidays.hr_leave_view_tree"/>
     </record>
+
 </odoo>
