--- a/views/hr_leave_views.xml
+++ b/views/hr_leave_views.xml
@@ -32,5 +32,12 @@
         <field name="view_mode">tree,form</field>
         <field name="view_id" ref="hr_holidays.hr_leave_view_tree"/>
     </record>
+    <record id="action_custom_leave_calendar" model="ir.actions.act_window">
+        <field name="name">Leave Calendar</field>
+        <field name="res_model">hr.leave</field>
+        <field name="view_mode">calendar,form</field>
+        <field name="view_id" ref="hr_holidays.hr_leave_view_calendar"/>
+    </record>
+
 
 </odoo>
