--- a/views/hr_leave_views.xml
+++ b/views/hr_leave_views.xml
@@ -16,16 +16,7 @@
         </field>
     </record>
 
-    <!-- <record id="hr_leave_view_tree_inherit" model="ir.ui.view">
-        <field name="name">hr.leave.tree.inherit</field>
-        <field name="model">hr.leave</field>
-        <field name="inherit_id" ref="hr_holidays.hr_leave_view_tree"/>
-        <field name="arch" type="xml">
-            <field name="state" position="after">
-                <field name="leave_reviewer_id"/>
-            </field>
-        </field>
-    </record> -->
+
     <record id="action_custom_leave" model="ir.actions.act_window">
         <field name="name">Employee Leaves</field>
         <field name="res_model">hr.leave</field>
@@ -39,26 +30,18 @@
         <field name="view_id" ref="hr_holidays.hr_leave_view_calendar"/>
     </record>
 
-    <!-- <record id="action_hr_leave_report" model="ir.actions.act_window">
-        <field name="name">Leave Analysis</field>
-        <field name="res_model">hr.leave.report</field>
-        <field name="view_mode">pivot,graph</field>
-        <field name="domain">[
-            ["holiday_status_id.active","=",True]],
-            ["holiday_status_id.active", "=", True],
-            ["employee_id.active", "=", True]
-        
+
+    <record id="hr_leave_form_inherit" model="ir.ui.view">
+        <field name="name">hr.leave.form.inherit</field>
+        <field name="model">hr.leave</field>
+        <field name="inherit_id" ref="hr_holidays.hr_leave_view_form"/>
+        <field name="arch" type="xml">
+            <field name="number_of_days" position="attributes">
+                <attribute name="digits">[16,0]</attribute>
+            </field>
+
         </field>
-        <field name="context">{
-            'pivot_measures': ['number_of_days'],
-            'pivot_column_groupby': ['date_from'],
-            'pivot_row_groupby': ['employee_id', 'holiday_status_id'],
-            'pivot_computed_measures': [],
-            'group_by': ['employee_id', 'holiday_status_id']
-        }</field>
-    </record> -->
-
-
+    </record>
 
 
 
