--- a/views/leave_menu.xml
+++ b/views/leave_menu.xml
@@ -58,6 +58,12 @@
         action="action_hr_leave_allocation"
         sequence="1"/>
 
+    <menuitem 
+        id="menu_hr_leave_types" 
+        name="Leave Types" 
+        parent="menu_hr_leave_configuration" 
+        action="hr_holidays.open_view_holiday_status" 
+        sequence="2"/>
 
 
 
